# ax-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  custom_config.h  download_ax_bsp.sh  make_new_release_to.sh  switch_version_ax650.sh
alarm/: CMakeLists.txt  alarm.cpp  alarm.hpp
ax650n_bsp_sdk/msp/component/isp_proton/sensor/platform/tcm/: common_tcm.h
ax650n_bsp_sdk/msp/sample/common/: common_arg_parse.c  common_cam.c  common_cam.h  common_config.h  common_hw.c  common_hw.h  common_isp.c  common_isp.h  common_nt.c  common_que.c  common_que.h  common_sys.c  common_sys.h  common_type.h  common_vdec.c  common_vdec_api.h  common_vdec_cmd.c  common_vdec_cmd.h  common_vdec_hal.c  common_vdec_hal.h  common_vdec_log.h  common_vdec_utils.c  common_vdec_utils.h  common_venc.c  common_venc.h  common_vin.c  common_vin.h  common_vo.c  common_vo.h
camera/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp
cmake/: build_func.cmake
docs/: compile.md  compile_620e.md  compile_650.md  how_to_deploy_custom_model.md
examples/common/: common_check.cpp  common_check.h  common_func.c  common_func.h  video_demux.hpp
examples/common/common_pipeline/: CMakeLists.txt  common_pipeline.h
examples/common/common_pipeline/ax620e/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp  common_pipeline_vo.cpp
examples/common/common_pipeline/ax650/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp  common_pipeline_vo.cpp
examples/libaxdl/: CMakeLists.txt
examples/libaxdl/config/ax650/: clip.json  crowdcount.json  custom_model.json  depth_anything.json  dinov2.json  owlvit.json  scrfd_recognition.json  wt_rtsp_blade.json  yolov5s_face_recognition.json  yolov8.json  yolov8_pose.json  yolov8_seg.json
examples/libaxdl/include/: ax_common_api.h  ax_model_base.hpp  ax_model_runner.hpp  ax_osd_drawer.hpp  ax_osd_helper.hpp  c_api.h
examples/libaxdl/src/: ax_common_api.cpp  ax_freetype_overlay.cpp  ax_freetype_overlay.hpp  ax_model_base.cpp  ax_model_clip.cpp  ax_model_clip.hpp  ax_model_crowdcount.cpp  ax_model_crowdcount.hpp  ax_model_custom.cpp  ax_model_custom.hpp  ax_model_damage.cpp  ax_model_damage.hpp  ax_model_det.cpp  ax_model_det.hpp  ax_model_ml_sub.cpp  ax_model_ml_sub.hpp  ax_model_multi_level_model.cpp  ax_model_multi_level_model.hpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp  ax_model_seg.cpp  ax_model_seg.hpp  c_api.cpp
examples/libaxdl/src/base/: detection.hpp
examples/libaxdl/src/utilities/: file.hpp  mat_pixel_affine.cpp  mat_pixel_affine.h  object_register.hpp
examples/sample_demux_ivps_npu_hdmi_vo/: CMakeLists.txt  sample_demux_ivps_npu_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp/: CMakeLists.txt  sample_demux_ivps_npu_rtsp.cpp
examples/sample_demux_ivps_npu_rtsp_hdmi_vo/: CMakeLists.txt  sample_demux_ivps_npu_rtsp_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp_vo/: CMakeLists.txt  sample_demux_ivps_npu_rtsp_vo.cpp
examples/sample_demux_ivps_npu_vo/: CMakeLists.txt  sample_demux_ivps_npu_vo.cpp
examples/sample_multi_demux_ivps_npu_hdmi_vo/: CMakeLists.txt  sample_multi_demux_ivps_npu_hdmi_vo.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp/: CMakeLists.txt  sample_multi_demux_ivps_npu_multi_rtsp.cpp
examples/sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo/: CMakeLists.txt  sample_multi_demux_ivps_npu_multi_rtsp_hdmi_vo.cpp
examples/utilities/: ax_version_check.cpp  ax_version_check.h  sample_log.h
